2006-09-01  Michael Natterer  <mitch@gimp.org>

	Extended the GIMP Gradient file format to contain the endpoint
	color types for each segment (this is backward compatible because
	old parsers just ignore excess fields at the end of segment
	lines). Fixes bug #128367.

	* app/core/gimpgradient-load.c: optionally load two more fields
	per segment line which contain the color types.

	* app/core/gimpgradient-save.c: save the color types at the end of
	the segment lines.

2006-09-01  Michael Natterer  <mitch@gimp.org>

	* app/actions/gradient-editor-actions.c
	* app/actions/gradient-editor-commands.[ch]: added actions and
	callbacks to select a gradient segment's left and right color
	type. Handle FG/BG color correctly in a few places. Use
	GimpDataEditor's context instead of the user context.

	* menus/gradient-editor-menu.xml: added the actions to the menu.

	Cleanup:

	* app/actions/palette-editor-actions.c
	* app/actions/palette-editor-commands.c: use GimpDataEditor's
	context instead of the user context.

	* app/actions/brush-editor-actions.c: remove unused context
	variable.

2006-08-31  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainerview.c 
	(gimp_container_view_real_set_container)
	(gimp_container_view_real_set_context)
	(gimp_container_view_item_selected)
	(gimp_container_view_thaw): support setting a context even if
	the viewed container's children_type is *not* a property of
	GimpContext. This removes a major restriction of container
	views and allows to get rid of some hacks:

	* app/widgets/gimpitemtreeview.[ch]: removed GimpContext member
	and implement GimpContainerView::set_context() instead of
	GimpDocked::set_context().

	* app/widgets/gimpchanneltreeview.c
	* app/widgets/gimpcontainergridview.c
	* app/widgets/gimpcontainertreeview.c
	* app/widgets/gimpdrawabletreeview.c
	* app/widgets/gimplayertreeview.c: use GimpContainerView's context
	instead of GimpItemTreeView's and implement GimpContainerView's